# python-reptile

./: .gitignore  README.md  boss_config.py  boss_spider.py  config.py  config_example.py  main.py  proxies.txt  pyproject.toml
spiders/: __init__.py  base.py  biquge.py  boss.py
tests/: test_base_spider.py
utils/: __init__.py  city_mapping.py
