[project]
name = "python-reptile"
version = "0.1.0"
description = "BOSS直聘爬虫项目"
requires-python = ">=3.8"

[project.dependencies]
selenium = ">=4.0.0"
webdriver-manager = ">=3.8.0"
fake-useragent = ">=1.1.0"
pandas = ">=2.0.0"
openpyxl = ">=3.1.0"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]

[tool.rye]
managed = true
dev-dependencies = [] 